--- a/src/main/resources/templates/food/add.html
+++ b/src/main/resources/templates/food/add.html
@@ -13,13 +13,13 @@
         <span th:errors="*{name}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="description">Description</label>
-        <input class="form-control" th:field="*{description}" />
-        <span th:errors="*{description}" class="error"></span>
+        <label th:for="servings">Servings</label>
+        <input class="form-control" th:field="*{servings}" />
+        <span th:errors="*{servings}" class="error"></span>
     </div>
 
     <div class="form-group">
-        <label th:for="type">Type</label>
+        <label th:for="category">Category</label>
         <select name="categoryId">
             <option th:each="category : ${categories}"
                     th:text="${category.name}"
