--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,14 +5,14 @@
     <title th:text="${title}">My Foods</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script category="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 
 <nav th:fragment="navigation">
-    <a href="/food">Home</a> |
-    <a href="/category">Categories</a> |
+    <a href="/food">Foods</a> |
+    <a href="/category">Food Categories</a> |
     <a href="/menu">Menus</a> |
 </nav>
 
