Menu page added, food functional.

--- a/src/main/resources/templates/Category/index.html
+++ b/src/main/resources/templates/Category/index.html
@@ -21,7 +21,8 @@
 
 </div>
 
-<a href="/category/add">Add Category</a>
+<a href="/category/add">Add</a> |
+<a href="/category/remove">Remove</a>
 
 </body>
 </html>
