--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,8 @@
 <nav th:fragment="navigation">
     <a href="/food">Foods</a> |
     <a href="/category">Food Categories</a> |
-    <a href="/menu">Menus</a> |
+    <a href="/menu">Menu</a> |
+    <a href="/">Home</a> |
 </nav>
 
 </body>
