--- a/src/main/resources/templates/Menu/index.html
+++ b/src/main/resources/templates/Menu/index.html
@@ -15,7 +15,7 @@
 
 <div><a href="/sleep">My Sleep</a> </div>
 
-<div><a href="/food">My Wellness</a> </div>
+<div><a href="/wellness">My Wellness</a> </div>
 
 
 </body>
