--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,8 +11,11 @@
 <body>
 
 <nav th:fragment="navigation">
-    <a href="/food">Foods</a> |
+    <a href="/food">Food</a> |
     <a href="/category">Food Categories</a> |
+    <a href="/exercise">Exercise</a> |
+    <a href="/sleep">Sleep</a> |
+    <a href="/wellness">Wellness Score</a> |
     <a href="/menu">Menu</a> |
     <a href="/">Home</a> |
 </nav>
