--- a/src/main/resources/templates/Wellness/add.html
+++ b/src/main/resources/templates/Wellness/add.html
@@ -8,6 +8,11 @@
 
 <form method="post" style="max-width:600px;" th:object="${wellness}">
     <div class="form-group">
+        <label th:for="date">Date</label>
+        <input class="form-control" th:field="*{date}" />
+        <span th:errors="*{date}" class="error"></span>
+    </div>
+    <div class="form-group">
         <label th:for="score">Today's Wellness Score from 1-5 (5 = Best)</label>
         <select name="cars" th:field="*{score}">
         <option value="1">1</option>
@@ -16,7 +21,6 @@
         <option value="4">4</option>
             <option value="5">5</option>
     </select>
-<!--        <span th:errors="*{score}" class="error"></span>-->
     </div>
 
     <input type="submit" value="Add Score" />
