--- a/src/main/resources/templates/Sleep/add.html
+++ b/src/main/resources/templates/Sleep/add.html
@@ -8,10 +8,16 @@
 
 <form method="post" style="max-width:600px;" th:object="${sleep}">
     <div class="form-group">
-        <label th:for="duration">Duration (hours)</label>
+        <label th:for="date">Date</label>
+        <input class="form-control" th:field="*{date}" />
+        <span th:errors="*{date}" class="error"></span>
+    </div>
+    <div class="form-group">
+        <label th:for="duration">Sleep Duration (hours)</label>
         <input class="form-control" th:field="*{duration}" />
         <span th:errors="*{duration}" class="error"></span>
     </div>
+
 
     <input type="submit" value="Add Sleep" />
 </form>
