--- a/src/main/resources/templates/Exercise/index.html
+++ b/src/main/resources/templates/Exercise/index.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
+<nav th:replace="fragments :: navigation"></nav>
+
+
 <body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
 
 <p th:unless="${exercises} and ${exercises.size()}">Please Add an Exercise</p>
 
@@ -14,11 +16,13 @@
 <table class="table">
 
     <tr>
+        <th>Date</th>
         <th>Name</th>
-        <th>Duration</th>
+        <th>Duration (Hours)</th>
     </tr>
 
     <tr th:each="exercise : ${exercises}">
+        <td th:text="${exercise.date}"></td>
         <td th:text="${exercise.name}"></td>
         <td th:text="${exercise.duration}"></td>
     </tr>
