--- a/src/main/resources/templates/Category/add.html
+++ b/src/main/resources/templates/Category/add.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
+
+<nav th:replace="fragments :: navigation"></nav>
+
 <body class="container">
 <h1 th:text="${title}">Default Title</h1>
 
