--- a/src/main/resources/templates/Exercise/add.html
+++ b/src/main/resources/templates/Exercise/add.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-<h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<body class="container">
+<h1 th:text="${title}">Default Title</h1>
+
+
 <form method="post" style="max-width:600px;" th:object="${exercise}">
+    <div class="form-group">
+        <label th:for="date">Date</label>
+        <input class="form-control" th:field="*{date}" />
+        <span th:errors="*{date}" class="error"></span>
+    </div>
     <div class="form-group">
         <label th:for="name">Name</label>
         <input class="form-control" th:field="*{name}" />
         <span th:errors="*{name}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="duration">Duration (hours)</label>
+        <label th:for="duration">Duration (Hours)</label>
         <input class="form-control" th:field="*{duration}" />
         <span th:errors="*{duration}" class="error"></span>
     </div>
