--- a/src/main/resources/templates/Exercise/remove.html
+++ b/src/main/resources/templates/Exercise/remove.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
+
+<nav th:replace="fragments :: navigation"></nav>
+
 <body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
 
 <form method="post">
 
     <div th:each="exercise : ${exercises}" class="checkbox">
         <input type="checkbox" name="exerciseIds" th:value="${exercise.id}" th:id="${exercise.id}"/>
-        <label th:for="${exercise.id}" th:text="${exercise.name}"></label>
+        <label th:for="${exercise.id}" th:text="${exercise.date +' - '+ exercise.name}"></label>
         <br />
     </div>
 
