--- a/src/main/resources/templates/Menu/index.html
+++ b/src/main/resources/templates/Menu/index.html
@@ -2,6 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 
+<nav th:replace="fragments :: navigation"></nav>
+
+
 <body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
