--- a/src/main/resources/templates/Sleep/add.html
+++ b/src/main/resources/templates/Sleep/add.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
+
+<nav th:replace="fragments :: navigation"></nav>
+
 <body class="container">
 <h1 th:text="${title}">Default Title</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
 
 <form method="post" style="max-width:600px;" th:object="${sleep}">
     <div class="form-group">
@@ -13,7 +15,7 @@
         <span th:errors="*{date}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="duration">Sleep Duration (hours)</label>
+        <label th:for="duration">Sleep Duration (Hours)</label>
         <input class="form-control" th:field="*{duration}" />
         <span th:errors="*{duration}" class="error"></span>
     </div>
