--- a/src/main/resources/templates/food/add.html
+++ b/src/main/resources/templates/food/add.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container">
-<h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
 
+<body class="container">
+<h1 th:text="${title}">Default Title</h1>
+
+
 <form method="post" style="max-width:600px;" th:object="${food}">
+    <div class="form-group">
+        <label th:for="date">Date</label>
+        <input class="form-control" th:field="*{date}" />
+        <span th:errors="*{date}" class="error"></span>
+    </div>
     <div class="form-group">
         <label th:for="name">Name</label>
         <input class="form-control" th:field="*{name}" />
@@ -25,6 +32,7 @@
                     th:text="${category.name}"
                     th:value="${category.id}"></option>
         </select>
+        <a href="/category/add">Add</a>
     </div>
 
     <input type="submit" value="Add Food" />
