--- a/src/main/resources/templates/food/remove.html
+++ b/src/main/resources/templates/food/remove.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
+
+<nav th:replace="fragments :: navigation"></nav>
+
 <body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
 
 <form method="post">
 
     <div th:each="food : ${foods}" class="checkbox">
         <input type="checkbox" name="foodIds" th:value="${food.id}" th:id="${food.id}"/>
-        <label th:for="${food.id}" th:text="${food.name}"></label>
+        <label th:for="${food.id}" th:text="${food.date +' - '+ food.name}"></label>
         <br />
     </div>
 
