Displays hard-coded wellness scores in a graph now.

--- a/src/main/resources/templates/Wellness/index.html
+++ b/src/main/resources/templates/Wellness/index.html
@@ -8,6 +8,8 @@
 <body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
+<h3><a href="/displayBarGraph">View Wellness Graph</a></h3>
+
 
 
 <p th:unless="${wellness} and ${wellness.size()}">How Are You Feeling Today?</p>
