--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head"></head>
+<head th:replace="fragments :: head">
+    <title>Index</title>
+</head>
 
 <nav th:replace="fragments :: navigation"></nav>
 
@@ -18,6 +20,7 @@
 <a href="/exercise">My Exercise</a> <div></div>
 <a href="/sleep">My Sleep</a> <div></div>
     <a href="/wellness">My Wellness Score</a> </h3><div></div>
+
 
 
 
