Tweaked headings and navigation

--- a/src/main/resources/templates/Exercise/add.html
+++ b/src/main/resources/templates/Exercise/add.html
@@ -15,7 +15,7 @@
         <span th:errors="*{date}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="name">Name</label>
+        <label th:for="name">Activity</label>
         <input class="form-control" th:field="*{name}" />
         <span th:errors="*{name}" class="error"></span>
     </div>
