--- a/src/main/resources/templates/Exercise/index.html
+++ b/src/main/resources/templates/Exercise/index.html
@@ -17,7 +17,7 @@
 
     <tr>
         <th>Date</th>
-        <th>Name</th>
+        <th>Activity</th>
         <th>Duration (Hours)</th>
     </tr>
 
