--- a/src/main/resources/templates/Wellness/add.html
+++ b/src/main/resources/templates/Wellness/add.html
@@ -15,7 +15,7 @@
         <span th:errors="*{date}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="score">Today's Wellness Score from 1-5 (5 = Best)</label>
+        <label th:for="score">Today's Wellness Score From 1 to 5 (1 = Awful, 5 = Wonderful)</label>
         <select name="cars" th:field="*{score}">
         <option value="1">1</option>
         <option value="2">2</option>
