--- a/src/main/resources/templates/Wellness/index.html
+++ b/src/main/resources/templates/Wellness/index.html
@@ -19,7 +19,7 @@
 
     <tr>
         <th>Date</th>
-        <th>Wellness Score from 1-5 (5 = Best)</th>
+        <th>Wellness Score From 1 to 5 (1 = Awful, 5 = Wonderful)</th>
     </tr>
 
     <tr th:each="wellness : ${wellness}">
