--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,13 +16,12 @@
 <body>
 
 <nav th:fragment="navigation">
-    <a href="/">Home</a> |
+    | <a href="/">Home</a> |
     <a href="/food">Food</a> |
-    <a href="/category">Food Categories</a> |
-    <a href="/exercise">Exercise</a> |
+    <a href="/exercise">Activity</a> |
     <a href="/sleep">Sleep</a> |
     <a href="/wellness">Wellness Score</a> |
-    <a href="/menu">Menu</a> |
+
 
 </nav>
 
