--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,9 @@
 
 <u><i><h2 th:text="${#calendars.format(#calendars.createNow(), 'MMM dd yyyy')}">Today's Date</h2></i></u>
 
-<h3><a href="/food">My Food</a> <div></div>
-<a href="/exercise">My Exercise</a> <div></div>
-<a href="/sleep">My Sleep</a> <div></div>
+<h3><a href="/food">My Food Tracker</a> <div></div>
+<a href="/exercise">My Activity Tracker</a> <div></div>
+<a href="/sleep">My Sleep Tracker</a> <div></div>
     <a href="/wellness">My Wellness Score</a> </h3><div></div>
 
 
