--- a/src/main/resources/templates/Sleep/add.html
+++ b/src/main/resources/templates/Sleep/add.html
@@ -10,7 +10,7 @@
 
 <form method="post" style="max-width:600px;" th:object="${sleep}">
     <div class="form-group">
-        <label th:for="date">Date</label>
+        <label th:for="date">Today's Date</label>
         <input class="form-control" th:field="*{date}" />
         <span th:errors="*{date}" class="error"></span>
     </div>
