--- a/src/main/resources/templates/barGraph.html
+++ b/src/main/resources/templates/barGraph.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
+
 <head th:replace="fragments :: head">
     <meta charset="ISO-8859-1" />
     <link rel="stylesheet"
@@ -11,15 +13,13 @@
 
 </head>
 
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="fragments :: navigation" align="center"></nav>
 
-<body>
-<div class="container">
+<body class="container">
     <h2 align="center">Wellness Score Graph</h2>
 
     <div id="container"
          style="width: 550px; height: 400px; margin: 0 auto"></div>
-</div>
 <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
@@ -36,11 +36,9 @@
         title: {
             text: 'Your Wellness Scores to Date'
         },
-<!--        subtitle: {-->
-<!--            text: 'All Details is not true its a dummy Map'-->
-<!--        },-->
+
         xAxis: {
-            categories: [[${surveyMap.keySet()}]],
+            categories: [[${wellnessMap.keySet()}]],
             crosshair: true
         },
         yAxis: {
@@ -51,7 +49,7 @@
             }
         },
         tooltip: {
-            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+            headerFormat: '<span style="font-size:14px">{point.key}</span><table>',
             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
             '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
             footerFormat: '</table>',
@@ -66,7 +64,7 @@
         },
         series: [{
             name: 'Wellness',
-            data: [[${surveyMap.values()}]]
+            data: [[${wellnessMap.values()}]]
         }]
     });
     });
