--- a/src/main/resources/templates/food/add.html
+++ b/src/main/resources/templates/food/add.html
@@ -15,7 +15,7 @@
         <span th:errors="*{date}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="name">Name</label>
+        <label th:for="name">Food</label>
         <input class="form-control" th:field="*{name}" />
         <span th:errors="*{name}" class="error"></span>
     </div>
@@ -32,7 +32,7 @@
                     th:text="${category.name}"
                     th:value="${category.id}"></option>
         </select>
-        <a href="/category/add">Add</a>
+        <a href="/category/add">Add New Category</a>
     </div>
 
     <input type="submit" value="Add Food" />
