Refactored, removed trends data, graph bars display ints

--- a/src/main/resources/templates/Sleep/add.html
+++ b/src/main/resources/templates/Sleep/add.html
@@ -15,7 +15,7 @@
         <span th:errors="*{date}" class="error"></span>
     </div>
     <div class="form-group">
-        <label th:for="duration">Sleep Duration (Hours)</label>
+        <label th:for="duration">Last Night's Sleep Duration (Hours)</label>
         <input class="form-control" th:field="*{duration}" />
         <span th:errors="*{duration}" class="error"></span>
     </div>
