--- a/src/main/resources/templates/barGraph.html
+++ b/src/main/resources/templates/barGraph.html
@@ -51,7 +51,7 @@
         tooltip: {
             headerFormat: '<span style="font-size:14px">{point.key}</span><table>',
             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
+            '<td style="padding:0"><b> {point.y} </b></td></tr>',
             footerFormat: '</table>',
             shared: true,
             useHTML: true
